# MandelbrotSet_Intelx86

./: CMakeLists.txt  README.md  main.c  mandelbrot_set.asm  mandelbrot_set.h
